--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
             <th>Full url</th>
             <th>Short url</th>
             <th>Click</th>
-            <th>QR Code</th> <!-- Add a new column for QR Code -->
+            <th>QR Code</th>
           </tr>
         </thead>
         <tbody>
